--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta name="description" content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs." />
   <script defer src="js/script.js"></script>
   <title>Omnifood  &mdash; Never cook again</title>
-  <link rel="stylesheet" href="/css/variaveis.css" /> 
-  <link rel="stylesheet" href="/css/general.css" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/responsive.css" />
-  <link rel="icon" href="img/favicon512x.png" />
-  <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  <link rel="stylesheet" href="./css/variaveis.css" /> 
+  <link rel="stylesheet" href="./css/general.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/responsive.css" />
+  <link rel="icon" href="./img/favicon512x.png" />
+  <link rel="apple-touch-icon" href="./img/apple-touch-icon.png" />
   <link rel="manifest" href="manifest.webmanifest" />
 </head>
 <body>
 <!-- SECTION HEADER -->
 <header id="header"  class="header">
   <a href="#header">
-    <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
+    <img src="./img/omnifood-logo.png" alt="Omnifood logo" class="logo">
   </a>
     <nav class="main-nav">
       <ul class="main-nav-list">
@@ -55,12 +55,12 @@
 
         <div class="delivered-meals">
             <div class="delivered-imgs">
-              <img src="/img/customers/customer-1.jpg" alt="Customer Photo">
-              <img src="/img/customers/customer-2.jpg" alt="Customer Photo">
-              <img src="/img/customers/customer-3.jpg" alt="Customer Photo">
-              <img src="/img/customers/customer-4.jpg" alt="Customer Photo">
-              <img src="/img/customers/customer-5.jpg" alt="Customer Photo">
-              <img src="/img/customers/customer-6.jpg" alt="Customer Photo">
+              <img src="./img/customers/customer-1.jpg" alt="Customer Photo">
+              <img src="./img/customers/customer-2.jpg" alt="Customer Photo">
+              <img src="./img/customers/customer-3.jpg" alt="Customer Photo">
+              <img src="./img/customers/customer-4.jpg" alt="Customer Photo">
+              <img src="./img/customers/customer-5.jpg" alt="Customer Photo">
+              <img src="./img/customers/customer-6.jpg" alt="Customer Photo">
             </div>
               <p class="delivered-text">
                   <span>250,000+</span> 
@@ -71,9 +71,9 @@
   
     <div class="hero-img-box">
         <picture>
-          <source srcset="img/hero.webp" type="image/webp" />
-          <source srcset="img/hero.png" type="image/png" />
-            <img src="/img/hero.png" class="hero-img" alt="Woman emjoying healthy food">
+          <source srcset="./img/hero.webp" type="image/webp" />
+          <source srcset="./img/hero.png" type="image/png" />
+            <img src="./img/hero.png" class="hero-img" alt="Woman emjoying healthy food">
         </picture>
     </div>
 
@@ -84,11 +84,11 @@
   <div class="container">
     <h2 class="heading-featured-in"> As Featured in</h2>
     <div class="logos">
-      <img src="img/logos/techcrunch.png" alt="">
-      <img src="img/logos/business-insider.png" alt="">
-      <img src="img/logos/the-new-york-times.png" alt="">
-      <img src="img/logos/forbes.png" alt="">
-      <img src="img/logos/usa-today.png" alt="">
+      <img src="./img/logos/techcrunch.png" alt="">
+      <img src="./img/logos/business-insider.png" alt="">
+      <img src="./img/logos/the-new-york-times.png" alt="">
+      <img src="./img/logos/forbes.png" alt="">
+      <img src="./img/logos/usa-today.png" alt="">
     </div>
   </div>
 </section>
@@ -111,12 +111,12 @@
         </div>
 
         <div class="step-img-box">
-          <img src="img/app/app-screen-1.png" class="step-img" alt="Iphone app preferences selection screen">
+          <img src="./img/app/app-screen-1.png" class="step-img" alt="Iphone app preferences selection screen">
         </div>
 
     <!--STEP 2 -->
         <div class="step-img-box">
-          <img src="img/app/app-screen-2.png" class="step-img" alt="Iphone app preferences selection screen">
+          <img src="./img/app/app-screen-2.png" class="step-img" alt="Iphone app preferences selection screen">
         </div>
 
         <div class="step-text-box">
@@ -135,7 +135,7 @@
         </div>
 
         <div class="step-img-box">
-          <img src="img/app/app-screen-3.png" class="step-img" alt="Iphone app preferences selection screen">
+          <img src="./img/app/app-screen-3.png" class="step-img" alt="Iphone app preferences selection screen">
         </div>
 
   </div>
@@ -152,7 +152,7 @@
   <div class="container grid grid--3-cols mb-medium">   
 <!-- MEAL N1 -->
     <div class="meal">
-        <img src="img/meals/meal-1.jpg" class="meal-img" alt="Japanese Gyozas">
+        <img src="./img/meals/meal-1.jpg" class="meal-img" alt="Japanese Gyozas">
       <div class="meal-content">
         <div class="meal-tags">
           <span class="tag tag--vegetarian">Vegetarian</span>
@@ -177,7 +177,7 @@
 
 <!-- MEAL N2 -->
     <div class="meal">
-        <img src="img/meals/meal-2.jpg" class="meal-img" alt="Japanese Gyozas">
+        <img src="./img/meals/meal-2.jpg" class="meal-img" alt="Japanese Gyozas">
       <div class="meal-content">
         <div class="meal-tags">
           <span class="tag tag--vegan">Vegan</span>
@@ -293,22 +293,22 @@
     <img src="img/gallery/gallery-6.jpg" alt="Photo of arrenged food">
   </figure>
   <figure class="gallery-item">
-    <img src="img/gallery/gallery-7.jpg" alt="Photo of arrenged food">
+    <img src="./img/gallery/gallery-7.jpg" alt="Photo of arrenged food">
   </figure>
   <figure class="gallery-item">
-    <img src="img/gallery/gallery-8.jpg" alt="Photo of arrenged food">
+    <img src="./img/gallery/gallery-8.jpg" alt="Photo of arrenged food">
   </figure>
   <figure class="gallery-item">
-    <img src="img/gallery/gallery-9.jpg" alt="Photo of arrenged food">
+    <img src="./img/gallery/gallery-9.jpg" alt="Photo of arrenged food">
   </figure>
   <figure class="gallery-item">
-    <img src="img/gallery/gallery-10.jpg" alt="Photo of arrenged food">
+    <img src="./img/gallery/gallery-10.jpg" alt="Photo of arrenged food">
   </figure>
   <figure class="gallery-item">
-    <img src="img/gallery/gallery-11.jpg" alt="Photo of arrenged food">
+    <img src="./img/gallery/gallery-11.jpg" alt="Photo of arrenged food">
   </figure>
   <figure class="gallery-item">
-    <img src="img/gallery/gallery-12.jpg" alt="Photo of arrenged food">
+    <img src="./img/gallery/gallery-12.jpg" alt="Photo of arrenged food">
   </figure>
 </div>
 
@@ -479,7 +479,7 @@
 <!-- LOGO COL -->
         <div class="logo-col">
           <a href="#" class="footer-logo">
-            <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
+            <img src="./img/omnifood-logo.png" alt="Omnifood logo" class="logo">
           </a>
         
           <ul class="social-links">
